Fix Stable Tag, remove used Core lib, Sanitized, Escaped, and Validated, Out of Date Libraries

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL",
     "autoload": {
         "psr-4": {
-            "Inc\\": "./inc"
+            "SFSF\\Inc\\": "./inc"
         }
     },
     "authors": [
